--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,10 @@
 # Remove this line before deploying
 #_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
-DOWNLOAD_DIR = "/usr/src/app/downloads"
+BOT_TOKEN = "5591922774:AAFNyd5uLOhh4qvzUOMhp0cutBu8dTGFzQs"
+GDRIVE_FOLDER_ID = "1vGxwokiCCfaYPDV7uu12k5lTjIQcVi9d"
+OWNER_ID = 426080870
+DOWNLOAD_DIR = "/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 TELEGRAM_API =
