--- a/config_sample.env
+++ b/config_sample.env
@@ -7,10 +7,10 @@ OWNER_ID = 426080870
 DOWNLOAD_DIR = "/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+TELEGRAM_API = 4075055
+TELEGRAM_HASH = "6772ffafdcbdc3423d7a797b0b4ddf9e"
 # OPTIONAL CONFIG
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "true"
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
