--- a/config_sample.env
+++ b/config_sample.env
@@ -4,7 +4,7 @@
 BOT_TOKEN = "5591922774:AAFNyd5uLOhh4qvzUOMhp0cutBu8dTGFzQs"
 GDRIVE_FOLDER_ID = "1vGxwokiCCfaYPDV7uu12k5lTjIQcVi9d"
 OWNER_ID = 426080870
-DOWNLOAD_DIR = "/"
+DOWNLOAD_DIR = "/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 TELEGRAM_API = 4075055
@@ -12,7 +12,7 @@ TELEGRAM_HASH = "6772ffafdcbdc3423d7a797b0b4ddf9e"
 # OPTIONAL CONFIG
 IS_TEAM_DRIVE = "true"
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001462743499"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
