--- a/config_sample.env
+++ b/config_sample.env
@@ -3,7 +3,7 @@
 BOT_TOKEN = "5591922774:AAFNyd5uLOhh4qvzUOMhp0cutBu8dTGFzQs"
 GDRIVE_FOLDER_ID = "1vGxwokiCCfaYPDV7uu12k5lTjIQcVi9d"
 OWNER_ID = 426080870
-DOWNLOAD_DIR = "/app/downloads"
+DOWNLOAD_DIR = "/"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 TELEGRAM_API = 4075055
