--- a/config_sample.env
+++ b/config_sample.env
@@ -3,7 +3,7 @@
 BOT_TOKEN = "5591922774:AAFNyd5uLOhh4qvzUOMhp0cutBu8dTGFzQs"
 GDRIVE_FOLDER_ID = "1MTV9dRTdKsQtqWRr_ayLHdNo6BKkM5iM"
 OWNER_ID = 426080870
-DOWNLOAD_DIR = "/"
+DOWNLOAD_DIR = "/home/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 TELEGRAM_API = 4075055
